--- a/tmux.conf
+++ b/tmux.conf
@@ -17,19 +17,26 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# soften status bar color from harsh green to light gray
+# status bar
+set-option -g status-position top
+set-option -g status-justify centre
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right ''
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
 
 # increase scrollback lines
 set -g history-limit 10000
 
 # switch to last pane
 bind-key C-a last-pane
+
+# bind a reload key
+bind R source-file ~/.tmux.conf \; display-message " Config reloaded..".
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
