--- a/tmux.conf
+++ b/tmux.conf
@@ -20,14 +20,14 @@ set -g renumber-windows on
 # status bar
 set-option -g status-position top
 set-option -g status-justify centre
-set -g status-bg '#666666'
+set -g status-bg '#111111'
 set -g status-fg '#aaaaaa'
 set -g status-left ''
 set -g status-right ''
 
 # highlight current window
 set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg '#FF851B'
 
 # increase scrollback lines
 set -g history-limit 10000
